# avataa-dataflow

./: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml  ruff.toml  supervisord.conf
app/: .flake8  init_app.py  main.py  run_grpc.py
app/airflow_functions/: airflow-requirements.txt
app/airflow_functions/airflow_source_managers/: config.py
app/airflow_templates/load/: if_load_fails_delete_dbs.txt  imports.txt  task_end_all_loaded.txt  task_start_all.txt  tasks_for_one_source.txt
app/migrations/: env.py
app/migrations/versions/: 263a45616399_configure_data.py  4ea633b2ab1e_added_file_settings.py  5a3f657fb352_auth_settings_changed.py  840cb804b078_create_models.py  8c32b84695b9_initial.py  bded6d850ee8_added_api_settings.py  c8a753f9f780_added_dag_settings.py  f513e2c9d061_table_in_db_settings.py
app/results/dag_transform/: result.csv
app/services/security/: security_data_models.py  security_factory.py
app/settings/: config.py
app/v2/: config.py  main.py  models.py  utils.py
app/v2/database/: database.py  schemas.py
app/v2/etl/: models.py  templates.py  utils.py
app/v2/routers/: data_sources.py  extract.py  previews.py
app/v3/: alembic.ini  config.py  main.py
app/v3/database/: database.py  schemas.py
app/v3/file_server/: minio_client_manager.py
app/v3/grpc_config/: config.py  dataview_manager_utils.py  grpc_server.py  mo_info_client.py
app/v3/migrations/: env.py
app/v3/utils/: encryption_utils.py  open_api_parser.py
tests/v3/: conftest.py
tests/v3/models/: test_group.py  test_source.py
(+89 files in other folders)
